--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <div class="players">
         <div class="player-container">
             <img src="images/Aldridge.png" alt="Lamarcus Aldridge">
-            <div class="player-name">
-                LAMARCUS ALDRIDGE
-            </div>
-            <div class="player-position">
-                Center-Forward
+            <div class="player-info">
+                <div class="player-name">
+                    LAMARCUS ALDRIDGE
+                    </div>
+                <div class="player-position">
+                    Center-Forward
+                </div>
             </div>
             <div class="player-number">
                 21
@@ -26,11 +28,13 @@
         </div>
         <div class="player-container">
             <img src="images/Claxton.png" alt="Nic Claxton">
-            <div class="player-name">
-                NIC CLAXTON
-            </div>
-            <div class="player-position">
-                Forward-Center
+            <div class="player-info">
+                <div class="player-name">
+                    NIC CLAXTON
+                </div>
+                <div class="player-position">
+                    Forward-Center
+                </div>
             </div>
             <div class="player-number">
                 33
@@ -38,11 +42,13 @@
         </div>
         <div class="player-container">
             <img src="images/Curry.png" alt="Seth Curry">
-            <div class="player-name">
-                SETH CURRY
-            </div>
-            <div class="player-position">
-                Guard
+            <div class="player-info">
+                <div class="player-name">
+                    SETH CURRY
+                </div>
+                <div class="player-position">
+                    Guard
+                </div>
             </div>
             <div class="player-number">
                 30
@@ -50,11 +56,13 @@
         </div>
         <div class="player-container">
             <img src="images/Dragic.png" alt="Goran Dragic">
-            <div class="player-name">
-                GORAN DRAGIC
-            </div>
-            <div class="player-position">
-                Guard
+            <div class="player-info">
+                <div class="player-name">
+                    GORAN DRAGIC
+                </div>
+                <div class="player-position">
+                    Guard
+                </div>
             </div>
             <div class="player-number">
                 9
@@ -62,11 +70,13 @@
         </div>
         <div class="player-container">
             <img src="images/Duke.png" alt="David Duke Jr.">
-            <div class="player-name">
-                DAVID DUKE JR.
-            </div>
-            <div class="player-position">
-                Guard
+            <div class="player-info">
+                <div class="player-name">
+                    DAVID DUKE JR.
+                </div>
+                <div class="player-position">
+                    Guard
+                </div>
             </div>
             <div class="player-number">
                 6
@@ -74,11 +84,13 @@
         </div>
         <div class="player-container">
             <img src="images/Durant.png" alt="Kevin Durant">
-            <div class="player-name">
+            <div class="player-info">
+                <div class="player-name">
                 KEVIN DURANT
-            </div>
-            <div class="player-position">
-                Forward
+                </div>
+                <div class="player-position">
+                    Forward
+                </div>
             </div>
             <div class="player-number">
                 7
@@ -86,11 +98,13 @@
         </div>
         <div class="player-container">
             <img src="images/Edwards.png" alt="Kessler Edwards">
-            <div class="player-name">
-                KESSLER EDWARDS
-            </div>
-            <div class="player-position">
-                Forward
+            <div class="player-info">
+                <div class="player-name">
+                    KESSLER EDWARDS
+                </div>
+                <div class="player-position">
+                    Forward
+                </div>
             </div>
             <div class="player-number">
                 14
@@ -98,11 +112,13 @@
         </div>
         <div class="player-container">
             <img src="images/Griffin.png" alt="Blake Griffin">
-            <div class="player-name">
-                BLAKE GRIFFIN
-            </div>
-            <div class="player-position">
-                Forward
+            <div class="player-info">
+                <div class="player-name">
+                    BLAKE GRIFFIN
+                </div>
+                <div class="player-position">
+                    Forward
+                </div>
             </div>
             <div class="player-number">
                 2
@@ -110,11 +126,13 @@
         </div>
         <div class="player-container">
             <img src="images/Harris.png" alt="Joe Harris">
-            <div class="player-name">
-                JOE HARRIS
-            </div>
-            <div class="player-position">
-                Guard-Forward
+            <div class="player-info">
+                <div class="player-name">
+                    JOE HARRIS
+                </div>
+                <div class="player-position">
+                    Guard-Forward
+                </div>
             </div>
             <div class="player-number">
                 12
@@ -122,11 +140,13 @@
         </div>
         <div class="player-container">
             <img src="images/Irving.png" alt="Kyrie Irving">
-            <div class="player-name">
+            <div class="player-info">
+                <div class="player-name">
                 KYRIE IRVING
-            </div>
-            <div class="player-position">
-                Guard
+                </div>
+                <div class="player-position">
+                    Guard
+                </div>
             </div>
             <div class="player-number">
                 11
@@ -134,11 +154,13 @@
         </div>
         <div class="player-container">
             <img src="images/Mills.png" alt="Patty Mills">
-            <div class="player-name">
-                PATTY MILLS
-            </div>
-            <div class="player-position">
-                Guard
+            <div class="player-info">
+                <div class="player-name">
+                    PATTY MILLS
+                </div>
+                <div class="player-position">
+                    Guard
+                </div>
             </div>
             <div class="player-number">
                 6
@@ -146,11 +168,13 @@
         </div>
         <div class="player-container">
             <img src="images/O'neale.png" alt="Royce O'neale">
-            <div class="player-name">
-                ROYCE O'NEALE
-            </div>
-            <div class="player-position">
-                Forward
+            <div class="player-info">
+                <div class="player-name">
+                    ROYCE O'NEALE
+                </div>
+                <div class="player-position">
+                    Forward
+                </div>
             </div>
             <div class="player-number">
                 23
@@ -158,11 +182,13 @@
         </div>
         <div class="player-container">
             <img src="images/Sharpe.png" alt="Day'Ron Sharpe">
-            <div class="player-name">
-                DAY'RON SHARPE
-            </div>
-            <div class="player-position">
-                Forward
+            <div class="player-info">
+                <div class="player-name">
+                    DAY'RON SHARPE
+                </div>
+                <div class="player-position">
+                    Forward
+                </div>
             </div>
             <div class="player-number">
                 20
@@ -170,11 +196,13 @@
         </div>
         <div class="player-container">
             <img src="images/Simmons.png" alt="Ben Simmons">
-            <div class="player-name">
-                BEN SIMMONS
-            </div>
-            <div class="player-position">
-                Guard-Forward
+            <div class="player-info">
+                <div class="player-name">
+                    BEN SIMMONS
+                </div>
+                <div class="player-position">
+                    Guard-Forward
+                </div>
             </div>
             <div class="player-number">
                 10
@@ -182,11 +210,13 @@
         </div>
         <div class="player-container">
             <img src="images/Sumner.png" alt="Edmond Sumner">
-            <div class="player-name">
-                EDMOND SUMNER
-            </div>
-            <div class="player-position">
-                Guard
+            <div class="player-info">
+                <div class="player-name">
+                    EDMOND SUMNER
+                </div>
+                <div class="player-position">
+                    Guard
+                </div>
             </div>
             <div class="player-number">
                 5
@@ -194,11 +224,13 @@
         </div>
         <div class="player-container">
             <img src="images/Thomas.png" alt="Cam Thomas">
-            <div class="player-name">
-                CAM THOMAS
-            </div>
-            <div class="player-position">
-                Guard
+            <div class="player-info">
+                <div class="player-name">
+                    CAM THOMAS
+                </div>
+                <div class="player-position">
+                    Guard
+                </div>
             </div>
             <div class="player-number">
                 24
@@ -206,11 +238,13 @@
         </div>
         <div class="player-container">
             <img src="images/Warren.png" alt="T.J. Warren">
-            <div class="player-name">
+            <div class="player-info">
+                <div class="player-name">
                 T.J. WARREN
-            </div>
-            <div class="player-position">
-                Forward
+                </div>
+                <div class="player-position">
+                    Forward
+                </div>
             </div>
             <div class="player-number">
                 1
