--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Brooklyn Nets Roster</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="header">
         <h1>BROOKLYN NETS ROSTER</h1>
@@ -14,242 +16,277 @@
     <div class="players">
         <div class="player-container">
             <img src="images/Aldridge.png" alt="Lamarcus Aldridge">
-            <div class="player-info">
-                <div class="player-name">
-                    LAMARCUS ALDRIDGE
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        LAMARCUS ALDRIDGE
                     </div>
-                <div class="player-position">
-                    Center-Forward
+                    <div class="player-position">
+                        Center-Forward
+                    </div>
                 </div>
-            </div>
-            <div class="player-number">
-                21
+                <div class="player-number">
+                    21
+                </div>
             </div>
         </div>
         <div class="player-container">
             <img src="images/Claxton.png" alt="Nic Claxton">
-            <div class="player-info">
-                <div class="player-name">
-                    NIC CLAXTON
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        NIC CLAXTON
+                    </div>
+                    <div class="player-position">
+                        Forward-Center
+                    </div>
                 </div>
-                <div class="player-position">
-                    Forward-Center
+                <div class="player-number">
+                    33
                 </div>
-            </div>
-            <div class="player-number">
-                33
             </div>
         </div>
         <div class="player-container">
             <img src="images/Curry.png" alt="Seth Curry">
-            <div class="player-info">
-                <div class="player-name">
-                    SETH CURRY
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        SETH CURRY
+                    </div>
+                    <div class="player-position">
+                        Guard
+                    </div>
                 </div>
-                <div class="player-position">
-                    Guard
+                <div class="player-number">
+                    30
                 </div>
-            </div>
-            <div class="player-number">
-                30
             </div>
         </div>
         <div class="player-container">
             <img src="images/Dragic.png" alt="Goran Dragic">
-            <div class="player-info">
-                <div class="player-name">
-                    GORAN DRAGIC
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        GORAN DRAGIC
+                    </div>
+                    <div class="player-position">
+                        Guard
+                    </div>
                 </div>
-                <div class="player-position">
-                    Guard
+                <div class="player-number">
+                    9
                 </div>
-            </div>
-            <div class="player-number">
-                9
             </div>
         </div>
         <div class="player-container">
             <img src="images/Duke.png" alt="David Duke Jr.">
-            <div class="player-info">
-                <div class="player-name">
-                    DAVID DUKE JR.
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        DAVID DUKE JR.
+                    </div>
+                    <div class="player-position">
+                        Guard
+                    </div>
                 </div>
-                <div class="player-position">
-                    Guard
+                <div class="player-number">
+                    6
                 </div>
-            </div>
-            <div class="player-number">
-                6
             </div>
         </div>
         <div class="player-container">
             <img src="images/Durant.png" alt="Kevin Durant">
-            <div class="player-info">
-                <div class="player-name">
-                KEVIN DURANT
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        KEVIN DURANT
+                    </div>
+                    <div class="player-position">
+                        Forward
+                    </div>
                 </div>
-                <div class="player-position">
-                    Forward
+                <div class="player-number">
+                    7
                 </div>
-            </div>
-            <div class="player-number">
-                7
             </div>
         </div>
         <div class="player-container">
             <img src="images/Edwards.png" alt="Kessler Edwards">
-            <div class="player-info">
-                <div class="player-name">
-                    KESSLER EDWARDS
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        KESSLER EDWARDS
+                    </div>
+                    <div class="player-position">
+                        Forward
+                    </div>
                 </div>
-                <div class="player-position">
-                    Forward
+                <div class="player-number">
+                    14
                 </div>
-            </div>
-            <div class="player-number">
-                14
             </div>
         </div>
         <div class="player-container">
             <img src="images/Griffin.png" alt="Blake Griffin">
-            <div class="player-info">
-                <div class="player-name">
-                    BLAKE GRIFFIN
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        BLAKE GRIFFIN
+                    </div>
+                    <div class="player-position">
+                        Forward
+                    </div>
                 </div>
-                <div class="player-position">
-                    Forward
+                <div class="player-number">
+                    2
                 </div>
-            </div>
-            <div class="player-number">
-                2
             </div>
         </div>
         <div class="player-container">
             <img src="images/Harris.png" alt="Joe Harris">
-            <div class="player-info">
-                <div class="player-name">
-                    JOE HARRIS
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        JOE HARRIS
+                    </div>
+                    <div class="player-position">
+                        Guard-Forward
+                    </div>
                 </div>
-                <div class="player-position">
-                    Guard-Forward
+                <div class="player-number">
+                    12
                 </div>
-            </div>
-            <div class="player-number">
-                12
             </div>
         </div>
         <div class="player-container">
             <img src="images/Irving.png" alt="Kyrie Irving">
-            <div class="player-info">
-                <div class="player-name">
-                KYRIE IRVING
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        KYRIE IRVING
+                    </div>
+                    <div class="player-position">
+                        Guard
+                    </div>
                 </div>
-                <div class="player-position">
-                    Guard
+                <div class="player-number">
+                    11
                 </div>
-            </div>
-            <div class="player-number">
-                11
             </div>
         </div>
         <div class="player-container">
             <img src="images/Mills.png" alt="Patty Mills">
-            <div class="player-info">
-                <div class="player-name">
-                    PATTY MILLS
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        PATTY MILLS
+                    </div>
+                    <div class="player-position">
+                        Guard
+                    </div>
                 </div>
-                <div class="player-position">
-                    Guard
+                <div class="player-number">
+                    6
                 </div>
-            </div>
-            <div class="player-number">
-                6
             </div>
         </div>
         <div class="player-container">
             <img src="images/O'neale.png" alt="Royce O'neale">
-            <div class="player-info">
-                <div class="player-name">
-                    ROYCE O'NEALE
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        ROYCE O'NEALE
+                    </div>
+                    <div class="player-position">
+                        Forward
+                    </div>
                 </div>
-                <div class="player-position">
-                    Forward
+                <div class="player-number">
+                    23
                 </div>
-            </div>
-            <div class="player-number">
-                23
             </div>
         </div>
         <div class="player-container">
             <img src="images/Sharpe.png" alt="Day'Ron Sharpe">
-            <div class="player-info">
-                <div class="player-name">
-                    DAY'RON SHARPE
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        DAY'RON SHARPE
+                    </div>
+                    <div class="player-position">
+                        Forward
+                    </div>
                 </div>
-                <div class="player-position">
-                    Forward
+                <div class="player-number">
+                    20
                 </div>
-            </div>
-            <div class="player-number">
-                20
             </div>
         </div>
         <div class="player-container">
             <img src="images/Simmons.png" alt="Ben Simmons">
-            <div class="player-info">
-                <div class="player-name">
-                    BEN SIMMONS
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        BEN SIMMONS
+                    </div>
+                    <div class="player-position">
+                        Guard-Forward
+                    </div>
                 </div>
-                <div class="player-position">
-                    Guard-Forward
+                <div class="player-number">
+                    10
                 </div>
-            </div>
-            <div class="player-number">
-                10
             </div>
         </div>
         <div class="player-container">
             <img src="images/Sumner.png" alt="Edmond Sumner">
-            <div class="player-info">
-                <div class="player-name">
-                    EDMOND SUMNER
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        EDMOND SUMNER
+                    </div>
+                    <div class="player-position">
+                        Guard
+                    </div>
                 </div>
-                <div class="player-position">
-                    Guard
+                <div class="player-number">
+                    5
                 </div>
-            </div>
-            <div class="player-number">
-                5
             </div>
         </div>
         <div class="player-container">
             <img src="images/Thomas.png" alt="Cam Thomas">
-            <div class="player-info">
-                <div class="player-name">
-                    CAM THOMAS
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        CAM THOMAS
+                    </div>
+                    <div class="player-position">
+                        Guard
+                    </div>
                 </div>
-                <div class="player-position">
-                    Guard
+                <div class="player-number">
+                    24
                 </div>
-            </div>
-            <div class="player-number">
-                24
             </div>
         </div>
         <div class="player-container">
             <img src="images/Warren.png" alt="T.J. Warren">
-            <div class="player-info">
-                <div class="player-name">
-                T.J. WARREN
+            <div class="info-container">
+                <div class="player-info">
+                    <div class="player-name">
+                        T.J. WARREN
+                    </div>
+                    <div class="player-position">
+                        Forward
+                    </div>
                 </div>
-                <div class="player-position">
-                    Forward
+                <div class="player-number">
+                    1
                 </div>
-            </div>
-            <div class="player-number">
-                1
             </div>
         </div>
     </div>
 </body>
+
 </html>
