--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
 
 <body>
     <div class="header">
+        <img src="images/logo.png" alt="Logo">
+        <ul class="header-info">
+            <li>Tickets</li>
+            <li>Team</li>
+            <li>Schedule</li>
+            <li>News</li>
+            <li>Community</li>
+            <li>Youth</li>
+            <li>Fans</li>
+            <li>Shop</li>
+            <li>Entertainment</li>
+            <li>Barclays Center</li>
+        </ul>
+    </div>
+    <div class="head">
         <h1>BROOKLYN NETS ROSTER</h1>
     </div>
     <div class="players">
