Add sticky header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <div class="header">
-        <img src="images/logo.png" alt="Logo">
+        <div class="header-logo">
+            <img src="images/logo.png" alt="Logo" class="logo">
+        </div>
         <ul class="header-info">
             <li>Tickets</li>
             <li>Team</li>
@@ -30,7 +32,9 @@
     </div>
     <div class="players">
         <div class="player-container">
-            <img src="images/Aldridge.png" alt="Lamarcus Aldridge">
+            <div class="player-image">
+                <img src="images/Aldridge.png" alt="Lamarcus Aldridge">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -46,7 +50,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Claxton.png" alt="Nic Claxton">
+            <div class="player-image">
+                <img src="images/Claxton.png" alt="Nic Claxton">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -62,7 +68,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Curry.png" alt="Seth Curry">
+            <div class="player-image">
+                <img src="images/Curry.png" alt="Seth Curry">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -78,7 +86,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Dragic.png" alt="Goran Dragic">
+            <div class="player-image">
+                <img src="images/Dragic.png" alt="Goran Dragic">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -94,7 +104,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Duke.png" alt="David Duke Jr.">
+            <div class="player-image">
+                <img src="images/Duke.png" alt="David Duke Jr.">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -110,7 +122,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Durant.png" alt="Kevin Durant">
+            <div class="player-image">
+                <img src="images/Durant.png" alt="Kevin Durant">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -126,7 +140,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Edwards.png" alt="Kessler Edwards">
+            <div class="player-image">
+                <img src="images/Edwards.png" alt="Kessler Edwards">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -142,7 +158,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Griffin.png" alt="Blake Griffin">
+            <div class="player-image">
+                <img src="images/Griffin.png" alt="Blake Griffin">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -158,7 +176,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Harris.png" alt="Joe Harris">
+            <div class="player-image">
+                <img src="images/Harris.png" alt="Joe Harris">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -174,7 +194,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Irving.png" alt="Kyrie Irving">
+            <div class="player-image">
+                <img src="images/Irving.png" alt="Kyrie Irving">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -190,7 +212,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Mills.png" alt="Patty Mills">
+            <div class="player-image">
+                <img src="images/Mills.png" alt="Patty Mills">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -206,7 +230,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/O'neale.png" alt="Royce O'neale">
+            <div class="player-image">
+                <img src="images/O'neale.png" alt="Royce O'neale">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -222,7 +248,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Sharpe.png" alt="Day'Ron Sharpe">
+            <div class="player-image">
+                <img src="images/Sharpe.png" alt="Day'Ron Sharpe">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -238,7 +266,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Simmons.png" alt="Ben Simmons">
+            <div class="player-image">
+                <img src="images/Simmons.png" alt="Ben Simmons">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -254,7 +284,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Sumner.png" alt="Edmond Sumner">
+            <div class="player-image">
+                <img src="images/Sumner.png" alt="Edmond Sumner">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -270,7 +302,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Thomas.png" alt="Cam Thomas">
+            <div class="player-image">
+                <img src="images/Thomas.png" alt="Cam Thomas">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
@@ -286,7 +320,9 @@
             </div>
         </div>
         <div class="player-container">
-            <img src="images/Warren.png" alt="T.J. Warren">
+            <div class="player-image">
+                <img src="images/Warren.png" alt="T.J. Warren">
+            </div>
             <div class="info-container">
                 <div class="player-info">
                     <div class="player-name">
