--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brooklyn Nets Roster</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/logo.png" type="image/icon type">
 </head>
 
 <body>
@@ -26,6 +27,39 @@
             <li>Entertainment</li>
             <li>Barclays Center</li>
         </ul>
+    </div>
+    <div class="news">
+        <div class="news-container">
+            <div class="news-header">
+                <h2>
+                    NETS NEWS
+                </h2>
+            </div>
+            <div class="news-sub-header">
+                <h3>
+                    Team Updates, Ticket Offers, and More!
+                </h3>
+            </div>
+        </div>
+        <div class="inputs">
+            <div class="first-name">
+                <input type="text" placeholder="First Name">
+            </div>
+            <div class="last-name">
+                <input type="text" placeholder="Last Name">
+            </div>
+            <div class="email">
+                <input type="text" placeholder="Email">
+            </div>
+            <div class="zip-code">
+                <input type="number" placeholder="Zip Code">
+            </div>
+            <div class="subscribe-button">
+                <button>
+                    SUBSCRIBE
+                </button>
+            </div>
+        </div>
     </div>
     <div class="head">
         <h1>BROOKLYN NETS ROSTER</h1>
